--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/195/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/195/index.mdx
@@ -7,11 +7,11 @@ date: 08-07-2024
 
 Salut à tous !
 
-Another calm week in the React world. No huge announcement, but many great community articles to read.
+Encore une semaine calme dans le monde de React. Pas d'annonce fracassante, mais de nombreux articles de la communauté à lire.
 
-Node.js v22.6 is out with experimental TypeScript support! 🎉
+Node.js v22.6 est disponible avec le support expérimental de TypeScript ! 🎉
 
-Check our partner [React Universe Conf](https://www.reactuniverseconf.com/?utm_source=thisweekinreact) (🇵🇱 Wrocław - Sept 5-6), formerly named React Native EU. Get a 10% discount with code "TWIR". They really have a stunning speakers lineup this year!
+Consultez notre partenaire [React Universe Conf](https://www.reactuniverseconf.com/?utm_source=thisweekinreact) (🇵🇱 Wrocław - 5-6 septembre), anciennement nommé React Native EU. Bénéficiez d'une réduction de 10% avec le code « TWIR ». Ils ont vraiment une liste de conférenciers impressionnante cette année !
 
 <!-- truncate -->
 
@@ -53,20 +53,20 @@ With WorkOS you can start selling to enterprises with just a few lines of code.
 - 🐦 [Zuckerberg calling out React as one of Meta’s major open source initiatives](https://x.com/Vjeux/status/1818766264833392763)
 - 🐦 [Visual editing with ReactBricks using RSC](https://x.com/rauchg/status/1819383553668370440)
 - 📖 [Revised ”Redux Essentials" tutorial](https://redux.js.org/tutorials/essentials/part-1-overview-concepts)
-- 🗓️ [React-Africa](https://react-africa.com/?utm_source=thisweekinreact) - 🇲🇦 Casablanca - 29 November - Line up is online, check, and apply a 10% discount on tickets with code TWIR !
-- 📜 [React Compiler, How Does It Work?](https://yongseok.me/blog/en/react_compiler_1/): A 4-part series going really deep on the React Compiler code, explaining the Babel Plugin, useMemoCache, HIR/SSA transformations. That’s a lot of implementation details to read, and very technical, but there are also great overviews that describe the main algorithms at the end of each post. It operates on individual functions, with an AST “lowered” to a Hight-level Intermediate Representation (HIR) that also permits to decouple the compiler from Babel. A quite advanced piece of technology!
-- 📜 [Avoiding premature abstraction with Unstyled React Components](https://buildui.com/posts/avoiding-premature-abstraction-with-unstyled-react-components): Sam refactors a concrete Form button to a headless LoadingButton abstraction that remains flexible and doesn’t prematurely abstract styling. I agree, and once time comes you can still create another styled abstraction on top.
-- 📜 [Common Sense Refactoring of a Messy React Component](https://alexkondov.com/refactoring-a-messy-react-component/): Alex explains his process to refactor a bloated real-world Form component. I do the same: extracting sub-components, custom hooks, and helper code from the main component usually improves clarity.
-- 📜 [Introducing XState Store](https://tkdodo.eu/blog/introducing-x-state-store): Dominik (React Query) likes Zustand, but explains why he now finds XState Store a more compelling option. It’s quite similar but more opinionated (separate state/actions, event-driven…). Daishi answered you can get a similar interface with his new [Zustand-xs middleware](https://github.com/zustandjs/zustand-xs). I explained ([tweet](https://x.com/sebastienlorber/status/1821166302469194062)) why I’m not always a fan of an event-driven interface.
-- 📜 [Using Notion as my CMS with Next.js](https://jordaneldredge.com/notes/notion-cms/): Describes a setup to reduce the friction of creating and publishing notes. Notion content is first converted as Markdown, and then renderer in a Next.js app.
-- 📜 [Next.js’s unstable_cache() demystified](https://jordaneldredge.com/notes/unstable_cache/): Some notes on the dangers of returning classes, and a link to an interesting related article/package listing even more caching gotchas.
-- 📜 [Build your own React state management library in under 40 lines of code](https://paripsky.github.io/blog/build-your-own-react-state-management/): Creates a custom external store and reads it in React with… useSyncExternalStore + 2 improvement suggestions such as adding an Immer integration.
-- 📜 [GitHub Vitale - Live notebooks in VS Code for JavaScript/TypeScript, web development, and AI experimentation](https://githubnext.com/projects/vitale/): The GitHub Next team introduced a new Notebook technology (like Jupyter) for interactive exploratory coding based on Vite. It supports rendering a React component in a notebook cell.
-- 📜 [Frontend Security Checklist](https://www.trevorlasn.com/blog/frontend-security-checklist): Includes examples of mitigating XSS and CSRF attacks in a React context.
+- 🗓️ [React-Africa](https://react-africa.com/?utm_source=thisweekinreact) - 🇲🇦 Casablanca - 29 novembre - Le programme est en ligne, consultez-le et bénéficiez d'une réduction de 10 % sur les billets avec le code TWIR !
+- 📜 [React Compiler, How Does It Work?](https://yongseok.me/blog/en/react_compiler_1/) : Une série de 4 articles allant vraiment en profondeur sur le code de React Compiler, expliquant le plugin Babel, useMemoCache, les transformations HIR/SSA. Cela fait beaucoup de détails d'implémentation à lire, et c'est très technique, mais il y a aussi d'excellents aperçus qui décrivent les principaux algorithmes à la fin de chaque article. Il traite des fonctions individuelles, avec un AST « réduit » à une Représentation Intermédiaire de Haut niveau (HIR : Hight-level Intermediate Representation) qui permet également de découpler le compilateur de Babel. Une technologie très avancée !
+- 📜 [Avoiding premature abstraction with Unstyled React Components](https://buildui.com/posts/avoiding-premature-abstraction-with-unstyled-react-components) : Sam refactorise un bouton de formulaire concret en une abstraction LoadingButton headless qui reste flexible et sans faire abstraction prématurément du style. Je suis d'accord, et le moment venu, vous pourrez toujours créer une autre abstraction stylisée par-dessus.
+- 📜 [Common Sense Refactoring of a Messy React Component](https://alexkondov.com/refactoring-a-messy-react-component/) : Alex explique son processus de refactorisation d'un composant Form trop volumineux du monde réel. Je fais de même : sortir le code des sous-composants, des hooks personnalisés et du helper du composant principal permet généralement d'améliorer la clarté.
+- 📜 [Introducing XState Store](https://tkdodo.eu/blog/introducing-x-state-store) : Dominik (React Query) aime Zustand, mais explique pourquoi il trouve maintenant que XState Store est une option plus séduisante. C'est assez similaire mais plus orienté sur les besoins (séparation état/actions, piloté par les événements...). Daishi a répondu que vous pouvez obtenir une interface similaire avec son nouveau [Zustand-xs middleware](https://github.com/zustandjs/zustand-xs). J'ai expliqué ([tweet](https://x.com/sebastienlorber/status/1821166302469194062)) pourquoi je ne suis pas toujours fan d'une interface pilotée par les événements.
+- 📜 [Using Notion as my CMS with Next.js](https://jordaneldredge.com/notes/notion-cms/) : Décrit une configuration pour réduire la difficulté de créer et de publier des notes. Le contenu de Notion est d'abord converti en Markdown, puis rendu dans une application Next.js.
+- 📜 [Next.js’s unstable_cache() demystified](https://jordaneldredge.com/notes/unstable_cache/) : Quelques notes sur les dangers du retour des classes, et un lien vers un article/package intéressant listant encore plus de problèmes de mise en cache.
+- 📜 [Build your own React state management library in under 40 lines of code](https://paripsky.github.io/blog/build-your-own-react-state-management/) : Crée un store externe personnalisé et le lire dans React avec... useSyncExternalStore + 2 suggestions d'amélioration telles que l'ajout d'une intégration Immer.
+- 📜 [GitHub Vitale - Live notebooks in VS Code for JavaScript/TypeScript, web development, and AI experimentation](https://githubnext.com/projects/vitale/ ): L'équipe GitHub Next a introduit une nouvelle technologie de Notebook ( similaire à Jupyter) pour de l'exploration de codage interactif basé sur Vite. Elle prend en charge le rendu d'un composant React dans une cellule de notebook.
+- 📜 [Frontend Security Checklist](https://www.trevorlasn.com/blog/frontend-security-checklist) : Inclut des exemples permettant d'atténuer les attaques XSS et CSRF dans un contexte React.
 - 📜 [The Art of Dithering and Retro Shading for the Web (with React Three Fiber)](https://blog.maximeheckel.com/posts/the-art-of-dithering-and-retro-shading-web/)
 - 🔨 [Dédale - Email template development environment, based on React Email](https://bireme.io/en/blog/announcing-dedale)
-- 📦 [Redwood 8.0 RC](https://github.com/redwoodjs/redwood/releases/tag/v8.0.0-rc.1114): New version of the full-stack React framework is now in release candidate. It adds SSR and RSC support (experimental), Vite 5, Prettier 3. See the [v8 upgrade guide](https://community.redwoodjs.com/t/redwood-v8-0-0-upgrade-guide/7250). They also plan to introduce soon a Background Jobs feature.
-- 📦 [Vercel AI SDK 3.3 - useChat() supports file attachments, useObject() streams structured data](https://vercel.com/blog/vercel-ai-sdk-3-3): With structured data based on Zod schemas, LLMs are getting easier to use for devs. Note that [OpenAI also announced support for structured output with Zod support](https://openai.com/index/introducing-structured-outputs-in-the-api/)!
+- 📦 [Redwood 8.0 RC](https://github.com/redwoodjs/redwood/releases/tag/v8.0.0-rc.1114) : La nouvelle version du framework React est maintenant en release candidate. Elle ajoute le support SSR et RSC (expérimental), Vite 5, Prettier 3. Voir le [guide de mise à jour de la v8](https://community.redwoodjs.com/t/redwood-v8-0-0-upgrade-guide/7250). Ils prévoient également d'introduire bientôt une fonctionnalité Background Jobs.
+- 📦 [Vercel AI SDK 3.3 - useChat() supports file attachments, useObject() streams structured data](https://vercel.com/blog/vercel-ai-sdk-3-3) : Avec des données structurées basées sur les schémas Zod, les LLM deviennent plus faciles à utiliser pour les développeurs. Notez que [OpenAI a également annoncé la prise en charge des sorties structurées avec la prise en charge de Zod](https://openai.com/index/introducing-structured-outputs-in-the-api/) !
 - 📦 [Astro 4.13 - stable request rewriting, stable content collections JSON schemas](https://astro.build/blog/astro-4130/)
 - 📦 [react-three/xr 6.1 - WebXR Anchor API, Hit Testing API, DOM Overlay API, experimental Emulator](https://github.com/pmndrs/xr/releases/tag/v6.1.0)
 - 📦 [Tldraw sync - self-hostable real-time collaboration engine for React whiteboard drawing app](https://tldraw.substack.com/p/announcing-tldraw-sync)
@@ -103,13 +103,13 @@ Cette section est rédigée par [Benedikt](https://twitter.com/bndkt).
 
 - 💸 [React Native Mastery - The only course you need to Master React Native & Expo](https://notjust.dev/react-native-mastery?utm_source=twir&utm_medium=email)
 - 🐦 [Why the Hermes team favors JSI NativeState over HostObject](https://x.com/tmikov/status/1820266381545468200)
-- 🐦 [Experimental tree shaking support landed for Expo](https://x.com/baconbrix/status/1816488585409052925): Experimentally available in SDK 52 (which is in canary)
+- 🐦 [Experimental tree shaking support landed for Expo](https://x.com/baconbrix/status/1816488585409052925) : Disponible à titre expérimental dans le SDK 52 (qui est dans canary)
 - 🐦 [Styles coming to React Native - Linear gradients, box shadows, CSS filters, % flex gaps](https://x.com/Baconbrix/status/1821039004671741984)
 - 👀 [React Native PR - Linear gradient in React Native under experimental backgroundImage style prop](https://github.com/facebook/react-native/pull/45434)
-- 📜 [From JS to Fire OS - React Native for Amazon Devices](https://dev.to/amazonappdev/get-started-with-react-native-for-amazon-fire-os-51j8): Reminder that RN can be used to build apps for Fire Tablets and Fire TVs, as Fire OS is based on Android.
-- 📜 [TV Navigation in React Native: A Guide to using TVFocusGuideView](https://dev.to/amazonappdev/tv-navigation-in-react-native-a-guide-to-using-tvfocusguideview-302i): I’m really excited about RN beyond just phones and tablets, so I appreciate articles on how to best leverage platform specific behaviors like this article does for tvOS and Android TV.
-- 📜 [Xcode UI debugging with Quick Look](https://www.oskarkwasniewski.dev/blog/xcode-quick-look-debugging): Comes in handy if you happen to work in Xcode a lot (I don’t 😅).
-- 📜 [My visit to Chain React 2024 (and some tips for going to conferences)](https://dev.to/amazonappdev/my-visit-to-chain-react-2024-nfj): Warning - if you didn’t go to Chain React yourself, this article will give you major FOMO, but I still enjoyed reading this.
+- 📜 [From JS to Fire OS - React Native for Amazon Devices](https://dev.to/amazonappdev/get-started-with-react-native-for-amazon-fire-os-51j8) : Rappelons que RN peut être utilisé pour créer des applications pour les Fire Tablets et Fire TV, car Fire OS est basé sur Android.
+- 📜 [TV Navigation in React Native: A Guide to using TVFocusGuideView](https://dev.to/amazonappdev/tv-navigation-in-react-native-a-guide-to-using-tvfocusguideview-302i) : Je suis très enthousiaste à l'idée que RN ne se limite pas aux téléphones et aux tablettes, c'est pourquoi j'apprécie les articles sur la façon d'exploiter au mieux les comportements aux plateformes spécifiques, comme le fait cet article pour tvOS et Android TV.
+- 📜 [Xcode UI debugging with Quick Look](https://www.oskarkwasniewski.dev/blog/xcode-quick-look-debugging) : C'est pratique si vous travaillez beaucoup dans Xcode (ce qui n'est pas mon cas 😅).
+- 📜 [My visit to Chain React 2024 (and some tips for going to conferences)](https://dev.to/amazonappdev/my-visit-to-chain-react-2024-nfj) : Attention, si vous n'avez pas participé à Chain React, cet article va vous donner un sérieux FOMO, mais j'ai tout de même pris plaisir à le lire.
 - 📦 [React Native 0.75.0-rc.7 - update CLI to 14.0](https://github.com/facebook/react-native/releases/tag/v0.75.0-rc.7)
 - 📦 [React Native 0.74.5 - minor fixes](https://github.com/facebook/react-native/releases/tag/v0.74.5)
 - 📦 [react-native-gesture-handler 2.18.0 - Now has ReanimatedSwipeable as a standalone component, adds a couple improvements and support for RN 0.75](https://github.com/software-mansion/react-native-gesture-handler/releases/tag/2.18.0)
