--- a/website/newsletter/196/index.mdx
+++ b/website/newsletter/196/index.mdx
@@ -12,7 +12,7 @@ Hi everyone!
 
 **Newsletter intro : reactjsday + mention 10y anniversary + 2 tracks (16 speakers)**
 
-*   🗓️ [React Universe Conf](https://www.reactuniverseconf.com/?utm_source=thisweekinreact) -  🇵🇱 Wrocław - Sept 5-6. Get a 10% discount with code "TWIR". Speakers: Dan Abramov, Evan Bacon, Kent C. Dodds, Delba Oliveira...
+- 🗓️ [React Universe Conf](https://www.reactuniverseconf.com/?utm_source=thisweekinreact) -  🇵🇱 Wrocław - Sept 5-6. Get a 10% discount with code "TWIR". Speakers: Dan Abramov, Evan Bacon, Kent C. Dodds, Delba Oliveira...
 
 <!-- truncate -->
 
@@ -32,16 +32,12 @@ import Support from "../_support.mdx";
 
 **[Make the most of your design system with StackBlitz](https://stackblitz.com/design-systems?utm_source=twir&utm_medium=primary)**
 
-Your design system makes web development more efficient and consistent, but we know that building and maintaining it comes with no shortage of challenges. [**StackBlitz**](https://stackblitz.com/) **makes design systems easier to *evangelize*, *maintain*, and *evolve***. With StackBlitz you can:
+Your design system makes web development more efficient and consistent, but we know that building and maintaining it comes with no shortage of challenges. [**StackBlitz**](https://stackblitz.com/) **makes design systems easier to _evangelize_, _maintain_, and _evolve_**. With StackBlitz you can:
 
-*   📈 **Increase adoption rates**: Provide one-click instant environments your team can use to try internal libraries.
-    
-*   💻 **Elevate developer experience:** Include live code examples in your documentation.
-    
-*   🐛 **Improve bug reporting**: Instantly filter out true issues and never spin up heavy local installations for a simple bug report *ever again*.
-    
-*   🤝 **Simplify collaboration**: Facilitate seamless collaborations across engineering, design, and other departments.
-    
+- 📈 **Increase adoption rates**: Provide one-click instant environments your team can use to try internal libraries.
+- 💻 **Elevate developer experience:** Include live code examples in your documentation.
+- 🐛 **Improve bug reporting**: Instantly filter out true issues and never spin up heavy local installations for a simple bug report _ever again_.
+- 🤝 **Simplify collaboration**: Facilitate seamless collaborations across engineering, design, and other departments.
 
 **Ready to transform your design system workflow?** [Get started now](https://stackblitz.com/design-systems)!
 
@@ -51,7 +47,7 @@ Your design system makes web development more efficient and consistent, but we k
 
 <Todo />
 
-- 💸[Chromatic – Visual testing for Storybook, Playwright, and Cypress. Catch UI bugs that functional tests miss. Lightning-fast & zero flake.](https://www.chromatic.com/features/visual-test?utm_source=thisweekinreact&utm_medium=quick_link&utm_campaign=q3_2024)
+- 💸 [Chromatic – Visual testing for Storybook, Playwright, and Cypress. Catch UI bugs that functional tests miss. Lightning-fast & zero flake.](https://www.chromatic.com/features/visual-test?utm_source=thisweekinreact&utm_medium=quick_link&utm_campaign=q3_2024)
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -67,15 +63,15 @@ The feature management, A/B testing, and product analytics tools used by OpenAI,
 
 Install Statsig once and get:
 
-🧪 **A/B Testing:** Automated experiments with advanced stats. Ship only the features that work
+🧪 **A/B Testing:** Automated experiments with advanced stats. Ship only the features that work
 
-🚩 **Feature Flags:** Unlimited free flags and turn any flag into an A/B test with one click
+🚩 **Feature Flags:** Unlimited free flags and turn any flag into an A/B test with one click
 
-🥇**Product Analytics:** Track growth and measure feature impact. Conduct analysis by feature flag or A/B test group
+🥇 **Product Analytics:** Track growth and measure feature impact. Conduct analysis by feature flag or A/B test group
 
-🎥 **Session Replays:** Replay user interactions to understand experiences and frictions
+🎥 **Session Replays:** Replay user interactions to understand experiences and frictions
 
-🌐 **Web Analytics:** Drop a JS snippet for essential website metrics and dashboards
+🌐 **Web Analytics:** Drop a JS snippet for essential website metrics and dashboards
 
 Get up to 2M free-tier events and 10K session recordings — [**all for free**](https://statsig.com/?utm_campaign=this-week-in-react&utm_source=sponsorships&utm_medium=email&utm_content=website)**!**
 
