--- a/website/newsletter/196/index.mdx
+++ b/website/newsletter/196/index.mdx
@@ -1,7 +1,7 @@
 ---
 slug: /196
 title: "This Week In React #196: Forms, Jotai, DI, Electron, Docusaurus, Signals, Plunk, React-Server, Switchboard, React-Call, RN WebGPU, Nitro Modules, use dom, macOS, Screens, Autolinking, Cocoapods, Corepack, Node.js, TypeScript..."
-authors: [slorber]
+authors: [matthieugicquel, cyrilbo]
 date: 08-14-2024
 unlisted: true
 ---
@@ -10,11 +10,11 @@ Hi everyone!
 
 Newsletter intro : reactjsday + mention 10y anniversary + 2 tracks (16 speakers)
 
-Cyril and Matthieu from [Theodo Apps (formerly BAM)](https://apps.theodo.com/?utm_source=thisweekinreact) here, filling in this week to bring you the latest news from the React and React Native worlds.
+This week Seb is taking a break. Cyril and Matthieu from [Theodo Apps (formerly BAM)](https://apps.theodo.com/?utm_source=thisweekinreact) here, filling in to bring you the latest news from the React and React Native worlds.
 
 It’s a relatively calm week for React, with some ongoing discussions about Suspense drama in React 19.
 
-But React Native? That’s where the real action is! From Expo demoing a way to integrate React DOM components to the exciting launch of React Native WebGPU, there’s plenty to talk about. Plus, we’re diving into new approaches to native module development that are sure to shake things up. Let’s get into it!
+But React Native? That’s where the real action is! From Expo demoing a way to integrate React DOM components to the exciting launch of React Native WebGPU, there’s plenty to talk about. Plus, we’re diving into new approaches to native module development that are sure to shake things up. And React Native 0.75 is around the corner, we'll cover it next week!
 
 <!-- truncate -->
 
