--- a/website/newsletter/196/index.mdx
+++ b/website/newsletter/196/index.mdx
@@ -3,18 +3,20 @@ slug: /196
 title: "This Week In React #196: Forms, Jotai, DI, Electron, Docusaurus, Signals, Plunk, React-Server, Switchboard, React-Call, RN WebGPU, Nitro Modules, use dom, macOS, Screens, Autolinking, Cocoapods, Corepack, Node.js, TypeScript..."
 authors: [matthieugicquel, cyrilbo]
 date: 08-14-2024
-unlisted: true
 ---
 
 Hi everyone!
 
-Newsletter intro : reactjsday + mention 10y anniversary + 2 tracks (16 speakers)
+This week, we welcome **2 new contributors** to help **ensure the continuity of the newsletter** throughout the year, even when Seb is taking a break.
 
-This week Seb is taking a break. Cyril and Matthieu from [Theodo Apps (formerly BAM)](https://apps.theodo.com/?utm_source=thisweekinreact) here, filling in to bring you the latest news from the React and React Native worlds.
+**Cyril and Matthieu from [Theodo Apps (formerly BAM)](https://apps.theodo.com/?utm_source=thisweekinreact)** here 👋, filling in to bring you the latest news from the React and React Native worlds.
 
-It’s a relatively calm week for React, with some ongoing discussions about Suspense drama in React 19.
+It’s a relatively calm week for React, with some ongoing discussions about the Suspense drama in React 19.
 
-But React Native? That’s where the real action is! From Expo demoing a way to integrate React DOM components to the exciting launch of React Native WebGPU, there’s plenty to talk about. Plus, we’re diving into new approaches to native module development that are sure to shake things up. And React Native 0.75 is around the corner, we'll cover it next week!
+**But React Native? That’s where the real action is!**\
+From Expo demoing a way to integrate React DOM components to the exciting launch of React Native WebGPU, there’s plenty to talk about. Plus, we’re diving into new approaches to native module development that are sure to shake things up. And React Native 0.75 is around the corner, we'll cover it next week!
+
+Our partner conf **[reactjsday](https://2024.reactjsday.it/?utm_source=thisweekinreact)** (🇮🇹 Verona - 25 October) is celebrating its 10th year by upgrading to 2 tracks (16 talks). Get a 10% discount with code "TWIR". Great speakers have already been announced: Matheus Albuquerque, Aurora Scharff, Dani Coll, and more!
 
 <!-- truncate -->
 
@@ -102,7 +104,7 @@ Get up to 2M free-tier events and 10K session recordings — [**all for free**](
 **🎥 [React Native WebGPU](https://www.youtube.com/watch?v=i-DGY98cTjk)**
 
 React Native WebGPU has just launched, offering a unified API to leverage the GPU for advanced graphics and computation in React Native! By reusing the Web API standard, we will be able to easily integrate existing WebGPU code samples and libraries, such as ThreeJS, directly into React Native.
-Beyond just graphics, React Native WebGPU can be used for tasks like matrix computations, making it interesting for on-device machine learning algorithms. It's built using NitroModules for smooth Typescript to C++ interoperability. Currently, it's available in technical preview, signaling exciting developments ahead!
+Beyond just graphics, React Native WebGPU can be used for tasks like matrix computations, making it interesting for on-device machine learning algorithms. It's built using Nitro Modules for smooth Typescript to C++ interoperability. Currently, it's available in technical preview, signaling exciting developments ahead!
 
 ---
 
