upgrade Docusaurus to v3.5

--- a/website/newsletter/196/index.mdx
+++ b/website/newsletter/196/index.mdx
@@ -7,7 +7,7 @@ date: 08-14-2024
 
 Hi everyone!
 
-This week, we welcome **2 new contributors** to help **ensure the continuity of the newsletter** throughout the year, even when Seb is taking a break.
+This week, we welcome **2 new contributors** to help **ensure the continuity of the newsletter** throughout the year, even when Seb takes a break.
 
 **Cyril and Matthieu from [Theodo Apps (formerly BAM)](https://apps.theodo.com/?utm_source=thisweekinreact)** here 👋, filling in to bring you the latest news from the React and React Native worlds.
 
