--- a/website/newsletter/196/index.mdx
+++ b/website/newsletter/196/index.mdx
@@ -9,7 +9,7 @@ Hi everyone!
 
 This week, we welcome **2 new contributors** to help **ensure the continuity of the newsletter** throughout the year, even when Seb takes a break.
 
-**Cyril and Matthieu from [Theodo Apps (formerly BAM)](https://apps.theodo.com/?utm_source=thisweekinreact)** here 👋, filling in to bring you the latest news from the React and React Native worlds.
+**Cyril and Matthieu from [Theodo Apps (formerly BAM)](https://apps.theodo.com/en?utm_source=thisweekinreact)** here 👋, filling in to bring you the latest news from the React and React Native worlds.
 
 It’s a relatively calm week for React, with some ongoing discussions about the Suspense drama in React 19.
 
