--- a/website/newsletter/197/index.mdx
+++ b/website/newsletter/197/index.mdx
@@ -32,7 +32,22 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor1}
 
-<Todo />
+[![Are your React PR reviews turning into component chaos?](/emails/issues/197/coderabbit.jpg)](https://coderabbit.ai/?utm_source=newsletter&utm_medium=this-week-react-aug-21)
+
+**[Are your React PR reviews turning into component chaos?](https://coderabbit.ai/?utm_source=newsletter&utm_medium=this-week-react-aug-21)**
+
+Discover strategies to streamline your React PR reviews and elevate your team's focus to critical aspects of code quality. We'll review every PR with dependency management, code reconciliation & more, allowing your team to concentrate on architectural decisions, component design, and performance optimizations.
+
+CodeRabbit helps with:
+
+*   Best Practice Enforcement: Leverage CodeRabbit's ability to identify common React anti-patterns and suggest best practices, ensuring good code quality.
+    
+*   Component Structure Review: Benefit from a thorough summary of your component structure, receiving suggestions for better composition.
+    
+*   Actionable Code Review Comments: Fix the code right in the PR, with 1-click commit suggestion. 
+    
+
+CodeRabbit is free for all open-source repo's. [Get started today!](https://coderabbit.ai/?utm_source=newsletter&utm_medium=this-week-react-aug-21)
 
 ---
 
