--- a/website/newsletter/197/index.mdx
+++ b/website/newsletter/197/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /197
-title: "This Week In React #197: ..."
+title: "This Week In React #197: Waku, Effect, TanStack, Framer Motion, use(), Preact, Valtio, Astro, Three.js, Nitrogen, react-native-web, expo-dom, Tophat, Skip, TypeScript, Rspack..."
 authors: [slorber]
 date: 08-21-2024
 unlisted: true
@@ -8,15 +8,11 @@ unlisted: true
 
 Hi everyone!
 
-<Todo />
+Cyril and Matthieu from [Theodo Apps (formerly BAM)](https://apps.theodo.com/en?utm_source=thisweekinreact) here 👋, standing in for Seb to bring you the latest news from the React and React Native worlds.
+
+It’s been another calm week, but we've still got some great updates for you. Waku now supports React Server Actions, there are tips for using TanStack/Router, and we explore React's journey to becoming a full-stack framework. Plus, check out what's new in React Native 0.75 ! We also have some updates on NitroModules and react-native-webGPU. Dive in and enjoy!
 
 **Newsletter intro** : [React Advanced London](https://reactadvanced.com/?utm_source=Newsletter&utm_medium=thisweekinreact)
-
-*   🗓️ [Squiggle Conf](https://2024.squiggleconf.com/?utm_source=thisweekinreact) - 🇺🇸 Boston - 03 & 04 October - Get a 10% discount with code "TWIR". Speakers are announced, please take a tour on the conf website.
-    
-*   🗓️ [reactjsday](https://2024.reactjsday.it/?utm_source=thisweekinreact) - 🇮🇹 Verona - 25 October - Get a 10% discount with code "TWIR". A, B and C will speak !
-    
-*   🗓️ [React Universe Conf](https://www.reactuniverseconf.com/?utm_source=thisweekinreact) -  🇵🇱 Wrocław - Sept 5-6. Get a 10% discount with code "TWIR". Speakers: Evan Bacon, Marc Rousavy, Tzvetan Mikov, Oskar Kwaśniewski...
 
 <!-- truncate -->
 
@@ -40,12 +36,9 @@ Discover strategies to streamline your React PR reviews and elevate your team's 
 
 CodeRabbit helps with:
 
-*   Best Practice Enforcement: Leverage CodeRabbit's ability to identify common React anti-patterns and suggest best practices, ensuring good code quality.
-    
-*   Component Structure Review: Benefit from a thorough summary of your component structure, receiving suggestions for better composition.
-    
-*   Actionable Code Review Comments: Fix the code right in the PR, with 1-click commit suggestion. 
-    
+- Best Practice Enforcement: Leverage CodeRabbit's ability to identify common React anti-patterns and suggest best practices, ensuring good code quality.
+- Component Structure Review: Benefit from a thorough summary of your component structure, receiving suggestions for better composition.
+- Actionable Code Review Comments: Fix the code right in the PR, with 1-click commit suggestion.
 
 CodeRabbit is free for all open-source repo's. [Get started today!](https://coderabbit.ai/?utm_source=newsletter&utm_medium=this-week-react-aug-21)
 
@@ -53,9 +46,46 @@ CodeRabbit is free for all open-source repo's. [Get started today!](https://code
 
 ## ⚛️ React {#react}
 
-<Todo />
+[![Waku v0.21 adds full support for React Server Actions](/emails/issues/197/waku.jpg)](https://waku.gg/blog/server-actions-are-here)
 
-- 💸[TutorialKit — Create interactive tutorials instantly without building or managing any backend infrastructure.](https://tutorialkit.dev/)
+**[Waku v0.21 adds full support for React Server Actions](https://waku.gg/blog/server-actions-are-here)**
+
+React Server components have inspired a new wave of “React frameworks”. Waku, created by Daishi Kato (the creator of jotai, valtio…) is one of them. It was one of the first outside of Next.js offering support for server components.
+
+With the addition of Server Actions, most React 19 features are now supported by Waku, and it’s possible to develop full apps while skipping the “have an API” part.
+
+---
+
+[![From React to Effect](/emails/issues/197/effect.jpg)](https://effect.website/blog/from-react-to-effect)
+
+**[From React to Effect](https://effect.website/blog/from-react-to-effect)**
+
+Michael Arnaldi, the creator of Effect, explains how the models used by Effect and React are similar. While Effect is a powerful toolkit, it’s quite hard to get started with, almost like a new language, so drawing parallels with what we’re already familiar with can help.
+
+In Effect, just like with React, most of the code you write is a “blueprint”: you declare what your program should do without running it directly. Then the library (React of Effect) takes care of running it.
+
+---
+
+- 💸 [TutorialKit — Create interactive tutorials instantly without building or managing any backend infrastructure.](https://tutorialkit.dev/)
+- 🗓️ [reactjsday](https://2024.reactjsday.it/?utm_source=thisweekinreact) - 🇮🇹 Verona - 25 October - Get a 10% discount with code "TWIR". A, B and C will speak !
+- 🗓️ [Squiggle Conf](https://2024.squiggleconf.com/?utm_source=thisweekinreact) - 🇺🇸 Boston - 03 & 04 October - Get a 10% discount with code "TWIR". Speakers are announced, please take a tour on the conf website.
+- 📜 [Tips from 8 months of TanStack/Router in production](https://swizec.com/blog/tips-from-8-months-of-tan-stack-router-in-production/): Swizec Teller shares the guiding principles he applies, for instance when he uses loaders, suspense queries or queries
+- 📜 [React is (becoming) a Full-Stack Framework](https://www.robinwieruch.de/react-full-stack-framework/): With the addition of Server Components and Server Actions
+- 📜 [Synchronizing State In React](https://www.brenelz.com/posts/synchronizing-state-in-react/): Explains how to solve a classic bug “the right way”, not with a useEffect but by splitting components
+- 📜 [Building Swipe Actions component with React and Framer Motion](https://sinja.io/blog/swipe-actions-react-framer-motion)
+- 📜 [useStateObject: A Simple, Convenient API Around useState](https://www.jameskerr.blog/posts/use-state-object/)
+- 📜 [How to Build a React Hook That Handles Sequential Requests - Using an AbortController](https://webdeveloper.beehiiv.com/p/build-react-hook-handles-sequential-requests)
+- 📜 [Generate a PDF in React](https://spacejelly.dev/posts/generate-a-pdf-from-html-in-javascript) - html2pdf.js, React PDF, and Puppeteer
+- 📜 [Preact - Prerendering with Preset Vite](https://preactjs.com/blog/prerendering-preset-vite)
+- 📜 [Good Refactoring vs Bad Refactoring](https://www.builder.io/blog/good-vs-bad-refactoring)
+- 📜 [How Valtio Was Born](https://blog.axlight.com/posts/how-valtio-was-born/)
+- 📦 [Astro v4.14 - Experimental Content Layer API with Intellisense support in content files](https://astro.build/blog/astro-4140/)
+- 📦 [react-three/xr 6.2.0](https://github.com/pmndrs/xr/releases/tag/v6.2.0): Adds unbounded spaces, depth sensing, and secondary input sources
+- 📦 [react18-use](https://github.com/dai-shi/react18-use): Daishi Kato created a shim of the React 19 `use` hook that works in React 18. Includes the ability to 🐦 [call `use(Context)` inside `useMemo`](https://x.com/dai_shi/status/1825484689030955094) (experimental), a better alternative to context selectors the React team plans to implement.
+- 📦 [Formity](https://www.formity.app/): Define complex forms with a JSON structure, let the package handle the heavy-lifting
+- 📦 [rspack-plugin-react-refresh v1.0](https://github.com/rspack-contrib/rspack-plugin-react-refresh)
+- 🎙️ [PodRocket - Generative UI and React components with Malte Ubl](https://podrocket.logrocket.com/generative-ui-react-components-malte-ubl)
+- 🎥 [Jack Herrington - Secret React-Native Hack For React Web Devs! - use patch-package to patch a dependency not working with Server Components](https://www.youtube.com/watch?v=81oUBWJQii4)
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -77,22 +107,51 @@ Setup takes just two minutes, and our base plan includes 5,000 free snapshots pe
 
 ## 📱 React-Native {#react-native}
 
-This section is authored by [Benedikt](https://twitter.com/bndkt).
+**[React Native 0.75 released](https://reactnative.dev/blog/2024/08/12/release-0.75)**
 
-<Todo />
+This week marks the release of React Native 0.75, where the core team has reinforced their recommendation to use a React Native framework like Expo for building production-ready apps. Reflecting this shift, the `/template` folder has been removed from the core `react-native` package, and the `react-native init` command is set to be deprecated by the end of 2024, though both will still be accessible within the `@react-native-community` packages. Notably, this update brings significant improvements, including [enhanced performance during the auto-linking build phase](https://github.com/react-native-community/discussions-and-proposals/discussions/814) and the addition of [Yoga 3.1](https://www.yogalayout.dev/blog/announcing-yoga-3.1), which now supports the use of percentages for `gap`, `columnGap`, `rowGap`, and `translation` props when the new architecture is enabled. With these advancements, it's clear that adopting the new architecture is crucial for staying up to date with the latest features and stability improvements.
+
+---
+
+- 💸 [React Native Mastery - The only course you need to Master React Native & Expo](https://notjust.dev/react-native-mastery?utm_source=twir&utm_medium=email)
+- 👀 [React Native 0.76 will ship with a single merged dynamic library called libreactnative.so](https://github.com/react-native-community/discussions-and-proposals/discussions/816): This will reduce app size and startup time
+- 🐦 [Nitrogen, the new Codegen for NitroModules](https://x.com/mrousavy/status/1823796378860184044): Marc presents how Nitrogen generates swift specs that you can then implement without touching Objective-C & C++ code 👏
+- 🐦 [Types for react-native-web are now published on DefinitelyTyped](https://x.com/swmansion/status/1824379053836480771)
+- 🐦 [three.js running in RN thanks to react-native-webGPU](https://x.com/wcandillon/status/1825862686300672124)
+- 🐦 [expo-dom demo with React Three Fiber component](https://x.com/Baconbrix/status/1825128678683971733)
+- 🗓️ [React Universe Conf](https://www.reactuniverseconf.com/?utm_source=thisweekinreact) - 🇵🇱 Wrocław - Sept 5-6. Get a 10% discount with code "TWIR". Speakers: Evan Bacon, Marc Rousavy, Tzvetan Mikov, Oskar Kwaśniewski...
+- 📜 [React Native 0.75 is now available with Expo SDK 51](https://expo.dev/changelog/2024/08-14-react-native-0.75): No need to wait for SDK 52, take advantage of bug fixes, performance improvements, and the stabilization of the new architecture at a lower upgrade cost.
+- 📜 [Progressive Web Apps (PWAs): A stepping stone towards a native mobile application](https://www.thinkmill.com.au/blog/progressive-web-apps-pw-as-a-stepping-stone-towards-a-native-mobile-application): An up-to-date assessment of the trade-off between PWAs and native apps
+- 📦 [React Native Keyboard Controller v1.13](https://github.com/kirillzyusko/react-native-keyboard-controller/releases/tag/1.13.0): Adds support for Android modals and React Native 0.75
+- 📦 [Skip v1.0](https://skip.tools/blog/skip-1_0-release/): New cross-platform framework that allows developers to write native iOS apps in Swift and SwiftUI while automatically generating native Android code
+- 📦 [Shopify - Tophat is now open sourced](https://github.com/shopify/tophat)
+- 🎙️ [RNR 304 - React Navigation V7 with Satyajit Sahoo - React Navigation 7's new features, including the static API, improved deep linking, and enhanced TypeScript support](https://reactnativeradio.com/episodes/rnr-304-react-navigation-v7-with-satyajit-saho)
+- 🎥 [Jolly Coding - Expo Just Made Web-to-Native Migration Easier - expo-dom demo](https://www.youtube.com/watch?v=MKoZTAcVCJU)
 
 ---
 
 ## 🔀 Other {#other}
 
-<Todo />
+- 📊 [State of CSS 2024 survey is out](https://survey.devographics.com/en-US/survey/state-of-css/2024)
+- 👀 [Chrome 129 will introduce two new Javascript Events - scrollSnapChange and scrollSnapChanging](https://developer.chrome.com/blog/scroll-snap-events?hl=en)
+- 👀 [ECMAScript Error Safe Assignment Operator proposal](https://github.com/arthurfiorette/proposal-safe-assignment-operator) - Inspired by functional programming concepts like monads and Rust's `Result` type, It aims to streamline error handling in JavaScript by returning a tuple `[error, result]` from functions.
+- 🐦 [Colin’s hack to filter keys from a TS interface:](https://x.com/colinhacks/status/1824052417820021173) Using Omit/Pick and a string template literal
+- 📜 [Branded Types in Typescript](https://www.learningtypescript.com/articles/branded-types): Branded types are key if you want to strengthen your type system. Prices are not just numbers, nor is an amount of time, so protect your functions by narrowing down the types you accept.
+- 📜 [Total TypeScript - Why I Don't Like Enums - Numeric vs String Enums, Nominal typing and other quirks.](https://www.totaltypescript.com/why-i-dont-like-typescript-enums)
+- 📜 [Syntax Highlighting in Hand-Coded Websites - Implement syntax highlighting using OpenType features directly within a font](https://blog.glyphdrawing.club/font-with-built-in-syntax-highlighting/)
+- 📜 [“Smart” Layouts With Container Queries - Comparison of container queries with traditional media queries](https://css-tricks.com/smart-layouts-with-container-queries/)
+- 📜 [Lessons learned switching to Rspack - challenges and benefits of migrating a SPA from webpack to Rspack](https://birtles.blog/2024/08/14/lessons-learned-switching-to-rspack/)
+- 📜 [Spatial compute - Let the network decide where in the world to run your code](https://sunilpai.dev/posts/spatial-compute/)
+- 📦 [Chrome 128 Devtools update - Console insights by Gemini, Performance & Network panels improvements](https://developer.chrome.com/blog/new-in-devtools-128?hl=en)
+- 📦 [Volta 2.0 The Hassle-Free JavaScript Tool Manager](https://github.com/volta-cli/volta/releases/tag/v2.0.0)
+- 🎥 [Lydia Hallie - JavaScript Visualized - Closures](https://www.youtube.com/watch?v=6Ixyltr8_R0)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+[![alt](/emails/issues/197/meme.jpg)](https://x.com/colinhacks/status/1823445912997515429)
 
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/197/meme2.jpg)](https://x.com/nativewindcss/status/1824558552972923122)
 
 See ya! 👋
