--- a/website/newsletter/197/index.mdx
+++ b/website/newsletter/197/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /197
-title: "This Week In React #197: Waku, Effect, TanStack, Framer Motion, use(), Preact, Valtio, Astro, Three.js, Nitrogen, react-native-web, expo-dom, Tophat, Skip, TypeScript, Rspack..."
+title: "This Week In React #197: Waku, Effect, TanStack, Framer Motion, use(), Preact, Valtio, Astro, Three.js, Nitrogen, React-Native-Web, expo-dom, Tophat, React-Navigation, Skip, TypeScript, Rspack, Volta..."
 authors: [slorber]
 date: 08-21-2024
 unlisted: true
@@ -12,7 +12,7 @@ Cyril and Matthieu from [Theodo Apps (formerly BAM)](https://apps.theodo.com/en?
 
 It’s been another calm week, but we've still got some great updates for you. Waku now supports React Server Actions, there are tips for using TanStack/Router, and we explore React's journey to becoming a full-stack framework. Plus, check out what's new in React Native 0.75 ! We also have some updates on NitroModules and react-native-webGPU. Dive in and enjoy!
 
-**Newsletter intro** : [React Advanced London](https://reactadvanced.com/?utm_source=Newsletter&utm_medium=thisweekinreact)
+Check our partner conf [React Advanced London](https://reactadvanced.com/?utm_source=Newsletter&utm_medium=thisweekinreact) (🇬🇧 London - 25 & 28 October). We really like the idea of advanced React talks, and so far the lineup doesn't disappoint! 👌
 
 <!-- truncate -->
 
