--- a/website/newsletter/197/index.mdx
+++ b/website/newsletter/197/index.mdx
@@ -45,9 +45,9 @@ CodeRabbit is free for all open-source repo's. [Get started today!](https://code
 
 ## ⚛️ React {#react}
 
-[![Waku v0.21 adds full support for React Server Actions](/emails/issues/197/waku.jpg)](https://waku.gg/blog/server-actions-are-here)
+[![Waku v0.21 - Full support for React Server Actions](/emails/issues/197/waku.jpg)](https://waku.gg/blog/server-actions-are-here)
 
-**[Waku v0.21 adds full support for React Server Actions](https://waku.gg/blog/server-actions-are-here)**
+**[Waku v0.21 - Full support for React Server Actions](https://waku.gg/blog/server-actions-are-here)**
 
 React Server components have inspired a new wave of “React frameworks”. Waku, created by Daishi Kato (the creator of jotai, valtio…) is one of them. It was one of the first outside of Next.js offering support for server components.
 
@@ -106,7 +106,7 @@ Setup takes just two minutes, and our base plan includes 5,000 free snapshots pe
 
 ## 📱 React-Native {#react-native}
 
-**[React Native 0.75 released](https://reactnative.dev/blog/2024/08/12/release-0.75)**
+**[React Native 0.75](https://reactnative.dev/blog/2024/08/12/release-0.75)**
 
 This week marks the release of React Native 0.75, where the core team has reinforced their recommendation to use a React Native framework like Expo for building production-ready apps. Reflecting this shift, the `/template` folder has been removed from the core `react-native` package, and the `react-native init` command is set to be deprecated by the end of 2024, though both will still be accessible within the `@react-native-community` packages. Notably, this update brings significant improvements, including [enhanced performance during the auto-linking build phase](https://github.com/react-native-community/discussions-and-proposals/discussions/814) and the addition of [Yoga 3.1](https://www.yogalayout.dev/blog/announcing-yoga-3.1), which now supports the use of percentages for `gap`, `columnGap`, `rowGap`, and `translation` props when the new architecture is enabled. With these advancements, it's clear that adopting the new architecture is crucial for staying up to date with the latest features and stability improvements.
 
