--- a/website/newsletter/198/index.mdx
+++ b/website/newsletter/198/index.mdx
@@ -10,13 +10,10 @@ Hi everyone!
 
 <Todo />
 
-*    🗓️ [React Rally](https://reactrally.com/?utm_source=thisweekinreact) - 🇺🇸 Utah - 12-13, August - Post Conf
-    
-*   🗓️ [React-Brussels](https://www.react.brussels/?utm_source=thisweekinreact) - 🇧🇪 Brussels - 18 October - Get a 10% discount with code “TWIR”. **The full line up is now available, take a tour on the conference website !**
-    
-*   🗓️ [React Universe Conf](https://www.reactuniverseconf.com/?utm_source=thisweekinreact) -  🇵🇱 Wrocław - Sept 5-6. 10% discount with code "TWIR". Can’t make it in person? Register for Free Livestream Access! Speakers: Mike Grabowski, Fernando Rojo, Alex Hunt, Eric Vicenti...
-    
-*   🗓️ [React Advanced London](https://reactadvanced.com/?utm_source=Newsletter&utm_medium=thisweekinreact) - 🇬🇧 London - 25 & 28 October -
+- 🗓️ [React Rally](https://reactrally.com/?utm_source=thisweekinreact) - 🇺🇸 Utah - 12-13, August - Post Conf
+- 🗓️ [React-Brussels](https://www.react.brussels/?utm_source=thisweekinreact) - 🇧🇪 Brussels - 18 October - Get a 10% discount with code “TWIR”. **The full line up is now available, take a tour on the conference website !**
+- 🗓️ [React Universe Conf](https://www.reactuniverseconf.com/?utm_source=thisweekinreact) - 🇵🇱 Wrocław - Sept 5-6. 10% discount with code "TWIR". Can’t make it in person? Register for Free Livestream Access! Speakers: Mike Grabowski, Fernando Rojo, Alex Hunt, Eric Vicenti...
+- 🗓️ [React Advanced London](https://reactadvanced.com/?utm_source=Newsletter&utm_medium=thisweekinreact) - 🇬🇧 London - 25 & 28 October -
 
 <!-- truncate -->
 
@@ -38,17 +35,17 @@ import Support from "../_support.mdx";
 
 With WorkOS you can start selling to enterprises with just a few lines of code.
 
-🔐 WorkOS AuthKit supports a complete user management solution along with **SSO, SCIM, RBAC, & FGA**.
+🔐 WorkOS AuthKit supports a complete user management solution along with **SSO, SCIM, RBAC, & FGA**.
 
-🏗️ The APIs are **flexible, easy-to-use, and modular**. Pick and choose what you need and integrate in minutes.
+🏗️ The APIs are **flexible, easy-to-use, and modular**. Pick and choose what you need and integrate in minutes.
 
 🎨 Design and user experience are everything. From the quality of our documentation to how your users onboard, we **remove all the unnecessary complexity for developers**.
 
-✨ AuthKit is **free up to 1 million MAUs** and includes bot protection, MFA, RBAC, & more.
+✨ AuthKit is **free up to 1 million MAUs** and includes bot protection, MFA, RBAC, & more.
 
 🤝 WorkOS is trusted by hundreds of leading startups like **Perplexity**, **Vercel**, & **Webflow**.
 
-[Get started with WorkOS](https://workos.com/?utm_source=thisweekinreact&utm_medium=newsletter&utm_campaign=q32024) 🚀
+[Get started with WorkOS](https://workos.com/?utm_source=thisweekinreact&utm_medium=newsletter&utm_campaign=q32024) 🚀
 
 ---
 
@@ -78,11 +75,7 @@ Whether you're launching a new framework or updating an existing library, Tutori
 
 ## 📱 React-Native {#react-native}
 
-This section is authored by [Benedikt](https://twitter.com/bndkt).
-
-<Todo />
-
--💸[Learn how to create a simple, type-safe PDF viewer with the Apryse SDK and React Native — complete with editing and annotation features.](https://apryse.com/blog/mobile/react-native-typescript-pdf-viewer?utm_source=thisweekinreact&utm_medium=newsletter&utm_campaign=0828)
+- 💸 [Learn how to create a simple, type-safe PDF viewer with the Apryse SDK and React Native — complete with editing and annotation features.](https://apryse.com/blog/mobile/react-native-typescript-pdf-viewer?utm_source=thisweekinreact&utm_medium=newsletter&utm_campaign=0828)
 
 ---
 
