--- a/website/newsletter/198/index.mdx
+++ b/website/newsletter/198/index.mdx
@@ -154,8 +154,6 @@ Rspack is a very fast Rust bundler that is almost 100% compatible with Webpack, 
 
 ## 🤭 Fun {#fun}
 
-<Todo />
-
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/198/meme.jpg)](https://x.com/astrodotbuild/status/1820423005912105149)
 
 See ya! 👋
