--- a/website/newsletter/198/index.mdx
+++ b/website/newsletter/198/index.mdx
@@ -1,12 +1,16 @@
 ---
 slug: /198
-title: "This Week In React #198: ..."
+title: "This Week In React #198: React-Email, MUI, Rspack, prerendering, tree-shaking, Next.js, TanStack, Remix, RSC, Code Hike, Astro, CodePush, visionOS, Tophat, Bluetooth, MKKV, Swift, Re.Pack, Reanimated, TypeScript, Node..."
 authors: [slorber]
 date: 08-28-2024
 unlisted: true
 ---
 
 Hi everyone!
+
+Looks like it's the end of summer already, eh?
+
+I'm particularly excited about React Email, which I'd like to use for an upcoming newsletter email template, and for Rspack that I'm adopting for Docusaurus to replace webpack.
 
 <!-- truncate -->
 
