--- a/website/newsletter/198/index.mdx
+++ b/website/newsletter/198/index.mdx
@@ -9,6 +9,7 @@ Hi everyone!
 
 Looks like it's the end of summer already, eh?
 
+This week we had many great releases and articles!\
 I'm particularly excited about React Email, which I'd like to use for an upcoming newsletter email template, and for Rspack that I'm adopting for Docusaurus to replace webpack.
 
 <!-- truncate -->
