--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/197/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/197/index.mdx
@@ -7,7 +7,7 @@ date: 08-21-2024
 
 Salut à tous !
 
-Cyril and Matthieu from [Theodo Apps (formerly BAM)](https://apps.theodo.com/en?utm_source=thisweekinreact) here 👋, qui remplacent Seb pour vous présenter les dernières nouvelles des mondes React et React Native.
+Cyril et Matthieu de [Theodo Apps (anciennement BAM)](https://apps.theodo.com/en?utm_source=thisweekinreact) sont présents 👋, ils remplacent Seb pour vous présenter les dernières nouvelles des mondes React et React Native.
 
 La semaine a été encore une fois calme, mais nous avons encore quelques bonnes mises à jour pour vous. Waku supporte maintenant les actions React Server, il y a des astuces pour utiliser TanStack/Router, et nous explorons le chemin de React pour devenir un framework full-stack. De plus, découvrez les nouveautés de React Native 0.75 ! Nous avons également des mises à jour sur NitroModules et react-native-webGPU. Bonne lecture et savourez !
 
